<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="16dp"
        app:searchIcon="@null"
        app:iconifiedByDefault="false"
        app:queryHint="@string/item_chooser_search_hint" />

    <FrameLayout
        android:layout_marginBottom="8dp"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <TextView
            style="@style/TextAppearance.Material3.TitleSmall"
            android:breakStrategy="simple"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:id="@+id/dialog_title"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextAppearance.Material3.BodySmall"
            android:breakStrategy="simple"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:id="@+id/dialog_desc"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/select_all_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/select_all_label"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="全选"
            android:textColor="?android:textColorSecondary" />

        <CheckBox
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirm"
            style="@style/Widget.Material3.Button"/>

    </LinearLayout>
</LinearLayout>
